--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1kemalozturk/fastify-supabase",
+  "name": "@1kemalozturk/fastify-supabase",
   "version": "1.0.0",
   "description": "Supabase client initialization and encapsulation in fastify framework",
   "main": "plugin.js",
